# TeslaInfotainment

./: CMakeLists.txt  Main.qml  README.md  main.cpp
Controllers/: system.cpp  system.h
ui/BottomBar/: BottomBar.qml
ui/LeftScreen/: LeftScreen.qml
ui/RightScreen/: RightScreen.qml
